Added password key. Also will try and commit way more often!

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "PasswordKey": "19421-95215hqhfosaifhao8fsy0824712049y1408y12"
+  }
 }
